<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orbbec_validation_launch</name>
  <version>0.0.0</version>
  <description>Launch files for Orbbec validation protocol</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>orbbec_camera</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosbag2</exec_depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

